CREATE TABLE ETUDIANT(NUM_ET DECIMAL(6,0),NOM_ET VARCHAR(20),PRENOM_ET VARCHAR(15),CP_ET VARCHAR(5),VILLE_ET VARCHAR(20),ANNEE DECIMAL(2,0),GROUPE DECIMAL(1,0))

CREATE TABLE PROF(NUM_PROF DECIMAL(3,0),NOM_PROF VARCHAR(30),PRENOM_PROF VARCHAR(20),ADR_PROF VARCHAR(40),CP_PROF VARCHAR(5),VILLE_PROF VARCHAR(30),MAT_SPEC VARCHAR(7))

CREATE TABLE MODULE(CODE VARCHAR(7),LIBELLE VARCHAR(30),H_COURS_PREV DECIMAL(3,0),H_COURS_REA DECIMAL(3,0),H_TP_PREV DECIMAL(3,0),H_TP_REA DECIMAL(3,0),DISCIPLINE VARCHAR(15),COEFF_TEST DECIMAL(3,0),COEFF_CC DECIMAL(3,0),RESP DECIMAL(3,0),CODEPERE VARCHAR(7))

CREATE TABLE ENSEIGNT(CODE VARCHAR(7),NUM_PROF DECIMAL(3,0),NUM_ET DECIMAL(6,0))

CREATE TABLE NOTATION(NUM_ET DECIMAL(6,0),CODE VARCHAR(7),MOY_CC DECIMAL(2,0),MOY_TEST DECIMAL(2,0))

CREATE SEQUENCE SEQ_GEN_SEQUENCE MINVALUE 1 START WITH 3000 INCREMENT BY 50